<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/isr_nit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isr_nit_label" />

        <EditText
            android:id="@+id/isr_nit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/isr_nit"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/isr_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isr_name_label" />

        <EditText
            android:id="@+id/isr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/isr_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/isr_amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isr_amount_label" />

        <EditText
            android:id="@+id/isr_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/isr_amount"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/isr_percent_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/isr_detained"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/isr_detained"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/isr_detained_calculated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/iva_detained"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/iva_detained"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/iva_detained_calculated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/isr_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/isr_total"
                android:textSize="30sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/isr_total_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <Button
            android:id="@+id/calculate_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isr_button" />
    </LinearLayout>

</LinearLayout>